CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_FLAGS "-Wall -Wextra -O3 -g -std=c++11 -march=native")
set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11 -march=native")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -DDEBUG -g -O0")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3")

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/include
)

SET(PRJ lpm)

file(GLOB SOURCES src/*.cpp)

SET(ALL_LIBS
	-lmnl
)

ADD_EXECUTABLE(${PRJ} ${SOURCES})
TARGET_LINK_LIBRARIES(${PRJ} ${ALL_LIBS})
