CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE "Release")
endif(NOT CMAKE_BUILD_TYPE)

set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11 -march=native")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -DDEBUG -g3 -O0")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3 -flto")

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/include
)

SET(PRJ ariadne)

file(GLOB SOURCES src/*.cpp)

SET(ALL_LIBS
	-lmnl
	-pthread
)

ADD_EXECUTABLE(${PRJ} ${SOURCES})
TARGET_LINK_LIBRARIES(${PRJ} ${ALL_LIBS})
