PROJECT(ariadne-test CXX)

SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

if(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE "DEBUG")
endif(NOT CMAKE_BUILD_TYPE)

SET(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11 -march=native")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -DDEBUG -g3 -O0 -fno-omit-frame-pointer -fno-optimize-sibling-calls -fno-inline")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3 -flto")

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/include
	${CMAKE_SOURCE_DIR}/submodules/concurrentqueue
	${CMAKE_SOURCE_DIR}/submodules/readerwriterqueue
)


FILE(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
LIST(REMOVE_ITEM SOURCES "${CMAKE_SOURCE_DIR}/src/main.cpp")

SET(ALL_LIBS
	-lmnl
	-pthread
)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ALL_LIBS})

FILE(GLOB TESTS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(TESTNAMECPP ${TESTS})
	GET_FILENAME_COMPONENT(TESTNAME ${TESTNAMECPP} NAME_WE)
	ADD_EXECUTABLE(${TESTNAME} ${TESTNAMECPP})
	TARGET_LINK_LIBRARIES(${TESTNAME} ${PROJECT_NAME})
	ADD_TEST(${TESTNAME} ${TESTNAME})
endforeach(TESTNAMECPP)
